@@ -389,9 +389,10 @@
     <branch id="HEAD"/>
   </module>
   <module id="gconf">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringforzen="true"/>
   </module>
   <module id="gconf-editor">
     <defaults>
@@ -455,9 +456,6 @@
   <module id="ghex">
     <branch id="HEAD"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
-  </module>
-  <module id="giftoxic">
-    <branch id="HEAD"/>
   </module>
   <module id="gimmie">
     <branch id="HEAD"/>
@@ -1113,9 +1111,6 @@
     <branch id="HEAD"/>
   </module>
   <module id="gparted">
-    <branch id="HEAD"/>
-  </module>
-  <module id="gpdf">
     <branch id="HEAD"/>
   </module>
   <module id="gperfmeter">
