@@ -154,7 +154,6 @@
     <module id="genius"/>
     <module id="gftp"/>
     <module id="ghex"/>
-    <module id="giftoxic"/>
     <module id="gimmie"/>
     <module id="gimp" branch="gimp-2-4"/>
     <module id="gimp-freetype"/>
@@ -193,7 +192,6 @@
     <module id="goobox"/>
     <module id="gossip"/>
     <module id="gparted"/>
-    <module id="gpdf"/>
     <module id="gperfmeter"/>
     <module id="gtranslator" branch="gtranslator_1_1_8"/>
     <module id="gturing"/>
@@ -446,7 +444,7 @@
       <_description>GNOME developer platform</_description>
       <module id="atk" branch="gnome-2-20"/>
       <module id="gail" branch="gnome-2-20"/>
-      <module id="gconf"/>
+      <module id="gconf" branch="gnome-2-20"/>
       <module id="glib" branch="glib-2-14"/>
       <module id="gnome-vfs" branch="gnome-2-20"/>
       <module id="gtk+" branch="gtk-2-12"/>
