@@ -1,6 +1,13 @@
 2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* releases.xml.in:
+	* gnome-modules.xml.in:
+	Branched gconf for gnome-2-20
+	Removed gpdf and giftoxic since they are now in svn-archive.gnome.org
+
+2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* releases.xml.in:
 	Set the correct branch for gucharmap in GNOME 2.18
 
 2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
